--- a/22-6-1/6-1.md
+++ b/22-6-1/6-1.md
@@ -1,8 +1,75 @@
 # 1.看书
 
+## 1.1 推荐一本书
 今天终于历时一个月将c++服务器开发精髓看完了，我辞职前的工作就是c++服务器开发。当时开发的时候这本书还没看完，但是里面很多思路跟我实际开发的时候是一样的。再次从书里看到又温习了一遍。
 
 讲道理来说，这本书讲的真的很不错。不止讲c++，包括应用层协议设计，调试，不同平台的编程等等。算是服务器开发一本很好的中文入门书了，在C++这块。当然在一些工程优化细节上肯定还不够，可以做一些一般性能开发问题不大了。
 
 ![](assets/C++服务器开发精髓.png)
 
+## 1.2 C++感悟
+今天突然有个想法，如果C++主线程进程退出了，detach的工作线程还在工作会怎样
+
+后来搜了一下资料，至少在linux下，通过pthread的函数可以直接退出主线程，但是不退出进程。
+
+试了一下
+
+如果以exit或者return直接退出进程
+
+``` cpp
+#include <iostream>
+#include <pthread.h>
+#include <unistd.h>
+
+void *process(void *data)
+{
+    while (1)
+    {
+        printf("xxx---------->I'm is Son thread...\n");
+        sleep(1);
+    }
+}
+
+int main()
+{
+    pthread_t pid;
+    printf("xxx---------->%s(), line = %d\n", __FUNCTION__, __LINE__);
+    pthread_create(&pid, nullptr, process, nullptr);
+    pthread_detach(pid); //主进程和线程分离，子线程自行回收和释放资源
+
+    return 0;
+    pthread_exit(nullptr);
+}
+
+```
+
+运行结果是detach的工作线程会被中断掉
+
+如果我只让主线程退出
+```cpp
+#include <iostream>
+#include <pthread.h>
+#include <unistd.h>
+
+void *process(void *data)
+{
+    while (1)
+    {
+        printf("xxx---------->I'm is Son thread...\n");
+        sleep(1);
+    }
+}
+
+int main()
+{
+    pthread_t pid;
+    printf("xxx---------->%s(), line = %d\n", __FUNCTION__, __LINE__);
+    pthread_create(&pid, nullptr, process, nullptr);
+    pthread_detach(pid); //主进程和线程分离，子线程自行回收和释放资源
+    pthread_exit(nullptr);
+    return 0;
+}
+```
+detach的工作线程是死循环，一直都会打印信息出来，进程不会终止。
+
+这是在linux上直接调用pthread来做。使用标准库的thread，我就没找到对应的函数，尴尬，就先这么认为吧。
