--- a/22-6-2/6-2.md
+++ b/22-6-2/6-2.md
@@ -35,5 +35,51 @@ void oops(int param)
     thread t(f,2,string(buf));
     t.detach();
 }
-···
+```
+
+
+## 1.2 explicit
+
+避免类实例隐式转换。
+
+一种是对于只有一个参数或者有n个参数，但是后面n-1个参数都有默认参数。
+
+如果不加 explicit
+
+```cpp
+
+#include <iostream>
+using namespace std;
+
+class A
+{
+public:
+    A(int i = 1) : m(i)
+    {}
+
+    int getMa()
+    {
+        return m;
+    }
+private:
+    int m;
+};
+
+int main()
+{
+    A a;
+    cout << "a.m before a=10: " << a.getMa() << endl;
+    a = 2;
+    cout << "a.m after  a=10: " << a.getMa() << endl;
+
+    return 0;
+}
+
+
+```
+
+对于a=2 默认会首先构造出来一个新的对象，然后再调用拷贝构造函数，给对象赋值
+实际上，a =2被隐式转换成了s = A temp(2)，所以才能直接赋值。
+
+如果在构造函数前面加上explicit，上面的隐式转换就不可以被编译过。
 
