--- a/22-6-2/6-2.md
+++ b/22-6-2/6-2.md
@@ -83,3 +83,8 @@ int main()
 
 如果在构造函数前面加上explicit，上面的隐式转换就不可以被编译过。
 
+# 1.3 qt
+配置了一下linux下qt vtk vscode开发环境，使用cmake组织代码
+
+有空做一下可视化相关的桌面软件，要是能进一步开始进入数值仿真领域就更好了。或者工业软件方向
+
