--- a/22-6-3/6-3.md
+++ b/22-6-3/6-3.md
@@ -48,3 +48,11 @@ private:
 
 另外一个就是在对象析构的时候，等待成员线程结束。这样就可也不再手动控制join，同时保证主线程逻辑执行完不会直接关闭进程，中断尚未完成的工作线程。
 
+# 2.Sqlite源码解读
+
+源码版本：
+3.38.0
+
+挑战一下自己，既然自己看不上两三万写业务逻辑的码农工作，既然自己想要做软件方向，想做世界级别优秀的软件工程师，那么就从一些优秀的开源项目源码解析搞起。
+
+先学习人家，再模仿最后超越。过程很痛苦，但是一定会收获满满，而且不止需要看代码，要查阅资料，要看论文，挺好的。
