--- a/22-6-3/6-3.md
+++ b/22-6-3/6-3.md
@@ -48,6 +48,71 @@ private:
 
 另外一个就是在对象析构的时候，等待成员线程结束。这样就可也不再手动控制join，同时保证主线程逻辑执行完不会直接关闭进程，中断尚未完成的工作线程。
 
+## 1.2 lock_guard，lock，scope_guard
+在作用域内对互斥元加锁，离开作用域自动释放锁，用lock_guard,用的就是RAII实现
+lock同时锁多个互斥元，切没有死锁风险
+scope_guard类似于lock_guard，但是因为支持可变参数模板，可以锁多种类型互斥元
+
+lock_gurad和lock可以配合使用，比如
+```cpp
+#include <iostream>
+#include <thread>
+#include <chrono>
+#include <mutex>
+
+using namespace std;
+
+void swap(int &lId, int &rId)
+{
+    int tmpId = lId;
+    lId = rId;
+    rId = tmpId;
+}
+
+class X
+{
+private:
+    int id_;
+    mutex m_;
+
+public:
+    X(int id) : id_(id) {}
+    friend void swap(X &lhs, X &rhs)
+    {
+        if (&lhs.m_ == &rhs.m_)
+            return;
+        lock(lhs.m_, rhs.m_);
+        lock_guard<mutex> lockL(lhs.m_, std::adopt_lock);
+        lock_guard<mutex> lockR(rhs.m_, std::adopt_lock);
+        swap(lhs.id_, rhs.id_);
+    }
+
+    void print()
+    {
+        lock_guard<mutex> lock(m_);
+        cout << id_ << endl;
+    }
+};
+
+int main(int argc, char **argv)
+{
+    X x1(1);
+    X x2(2);
+
+    x1.print();
+    x2.print();
+
+    swap(x1, x2);
+
+    x1.print();
+    x2.print();
+
+    return 0;
+}
+```
+adopt_lock在lock_guard中，表示不用再上锁，但是在离开作用域后，会自动unlock
+
+
 # 2.Sqlite源码解读
 
 源码版本：
