--- a/22-6-3/6-3.md
+++ b/22-6-3/6-3.md
@@ -51,7 +51,7 @@ private:
 ## 1.2 lock_guard，lock，scope_guard
 在作用域内对互斥元加锁，离开作用域自动释放锁，用lock_guard,用的就是RAII实现
 lock同时锁多个互斥元，切没有死锁风险
-scope_guard类似于lock_guard，但是因为支持可变参数模板，可以锁多种类型互斥元
+scope_guard(C++17)类似于lock_guard，但是因为支持可变参数模板，可以锁多种类型互斥元
 
 lock_gurad和lock可以配合使用，比如
 ```cpp
@@ -111,6 +111,14 @@ int main(int argc, char **argv)
 }
 ```
 adopt_lock在lock_guard中，表示不用再上锁，但是在离开作用域后，会自动unlock
+
+## 1.3 unique_lock
+第二个参数如果是adopt_lock,直接管理互斥元的锁
+第二个参数如果是defer_lock,在unique_lock对象构造完，它处于无锁状态。后续可以lock来加锁
+
+unique_lock还有一个特性是不能不止，可以使用移动语义转移互斥元的所有权。
+
+unique_lock可以在不适用锁的时候调用unlock，用的时候再lock
 
 
 # 2.Sqlite源码解读
