--- a/22-6-3/6-3.md
+++ b/22-6-3/6-3.md
@@ -120,6 +120,64 @@ unique_lock还有一个特性是不能不止，可以使用移动语义转移互
 
 unique_lock可以在不适用锁的时候调用unlock，用的时候再lock
 
+## 1.4 once_flag 和 call_once
+对于初始化过程需要多线程保护，初始化完成之后，就不需要保护的一些场景，如果调用函数每次都测试是否完成初始化，运行效率就低了。
+一个解决版本是使用标准库提供的once_flag和call_once
+```cpp
+#include <iostream>
+#include <thread>
+#include <chrono>
+#include <mutex>
+#include <string>
+
+using namespace std;
+
+class Sample
+{
+public:
+    void init(string s)
+    {
+        for (int i = 0; i < 5; i++)
+        {
+            cout << "init by " << s << endl;
+            this_thread::sleep_for(chrono::seconds(2));
+        }
+
+        name_ = "Sample";
+    }
+
+    void sendData()
+    {
+        call_once(initFlag_, &Sample::init, this, string("send"));
+        cout << "send" << endl;
+    }
+
+    void recieveData()
+    {
+        call_once(initFlag_, &Sample::init, this, string("recieve"));
+        cout << "recieve" << endl;
+    }
+
+private:
+    std::once_flag initFlag_;
+    string name_;
+};
+
+int main(int argc, char **argv)
+{
+    Sample sample;
+    thread t2(&Sample::recieveData, &sample);
+    thread t1(&Sample::sendData, &sample);
+
+    t1.join();
+    t2.join();
+
+    return 0;
+}
+```
+在某一个线程初始化的时候其他线程等待。完成初始化后，后续函数调用就不需要额外检查初始化
+
+
 
 # 2.Sqlite源码解读
 
