--- a/22-6-4/6-4.md
+++ b/22-6-4/6-4.md
@@ -126,3 +126,24 @@ typedef void (ThreadSafeQueue<string>::*func1)(string & value);
 thread t2(func1(&ThreadSafeQueue<string>::waitAndPop), &queueSample, ref(getSample1));
 ```
 
+## 1.2 future和async
+当多线程之间存在关联，某个线程需要另外一个线程结果再运行自己相关操作的时候。
+
+future可以搭配async一起使用
+```cpp
+future<int> res = async(doSomething);
+```
+doSomething函数返回的是int类型结果，上面的async默认是由编译器实现来管理默认行为，可以直接开启一个新线程执行，也可以延后到调用future的get方法再执行
+
+延后到get执行：
+```cpp
+std::launch::defferred
+```
+
+直接起新线程执行
+```cpp
+std::launch::async
+```
+
+# 1.3 package_task
+
