--- a/22-6-4/6-4.md
+++ b/22-6-4/6-4.md
@@ -147,3 +147,128 @@ std::launch::async
 
 # 1.3 package_task
 
+```cpp
+#include <iostream>
+#include <thread>
+#include <future>
+#include <mutex>
+#include <utility>
+#include <queue>
+#include <string>
+
+using namespace std;
+
+struct FuncAndParam
+{
+    packaged_task<void(string)> task_;
+    string param_;
+};
+
+class Demo
+{
+private:
+    mutex taskQueueMutex_;
+    queue<FuncAndParam> tasks_;
+    bool isShutdown_;
+
+public:
+    Demo()
+    {
+        isShutdown_ = false;
+    }
+
+    bool getShutdownMsg()
+    {
+        lock_guard<mutex> lock(taskQueueMutex_);
+        return isShutdown_;
+    }
+
+    void setShutDown()
+    {
+        lock_guard<mutex> lock(taskQueueMutex_);
+        isShutdown_ = true;
+    }
+
+    void worker()
+    {
+        while (!getShutdownMsg())
+        {
+            cout << "worker" << endl;
+            this_thread::sleep_for(chrono::seconds(1));
+            packaged_task<void(string)> task;
+            string param;
+            {
+                lock_guard<mutex> lock(taskQueueMutex_);
+                if (tasks_.empty())
+                    continue;
+                task = move(tasks_.front().task_);
+                param = move(tasks_.front().param_);
+                tasks_.pop();
+            }
+            task(param);
+        }
+    }
+
+    template <typename Func>
+    future<void> postTask(Func func, string str)
+    {
+        packaged_task<void(string)> task(func);
+        future<void> res = task.get_future();
+        lock_guard<mutex> lock(taskQueueMutex_);
+        FuncAndParam fap;
+        fap.task_ = move(task);
+        fap.param_ = str;
+        tasks_.push(move(fap));
+        return res;
+    }
+};
+
+void func1(string str)
+{
+    for (int i = 0; i < 5; i++)
+    {
+        this_thread::sleep_for(chrono::seconds(1));
+        cout << "func1: " << str << endl;
+    }
+}
+
+int main(int argc, char **argv)
+{
+    Demo demo;
+
+    string str = "111";
+    demo.postTask<void(string)>(func1, ref(str));
+    thread t1(&Demo::worker, &demo);
+
+    str = "222";
+    demo.postTask<void(string)>(func1, ref(str));
+
+    this_thread::sleep_for(chrono::seconds(15));
+    demo.setShutDown();
+
+    t1.join();
+
+    return 0;
+}
+
+```
+FuncAndParam 用来存储运行函数任务和函数的输入参数
+Demo是主体，用isShutdown_表征工作线程是否应该结束
+worker是Demo的工作线程，只要不外部终止，就一直循环执行下去
+tasks_是包含运行函数和函数输入参数的队列
+
+比较特殊的是向队列中加入待执行函数和函数实参，这里面用的是模板
+```cpp
+  template <typename Func>
+    future<void> postTask(Func func, string str)
+```
+
+之所以这么用，就是说只要符合我们运行函数的声明，那么这个函数原型本身也可以是一个类型，这个类型就是我们定义的Func
+
+package_task需要注意一点就是它也是不能复制的，只能移动，否则编译不过去。
+
+
+# 2. 图形学和游戏引擎
+今天一个知乎网友跟我联系一个游戏引擎开发的岗位，我挺感兴趣的，但是图形学也好，渲染，gpu之类的也好，最多也只是泛泛地了解一点，远没到可以直接开发商业化工具的程度。但是我们约好一周，我准备一下，接下来一周要加油学习了。
+
+一个是opengl一个是实时渲染，就看那本书吧
