--- a/22-6-5/6-5.md
+++ b/22-6-5/6-5.md
@@ -6,3 +6,6 @@
 
 一些相关记录会放在LearnOpenGL.md中。学习opengl的相关代码不会单独成项目，而是直接作为基础，放进实时渲染的项目中，作为底层实现，自己做C++应用层面的封装和组织。
 
+
+# 3 关于实时渲染的书籍
+每章平均50页上下，相当于一个中等篇幅的综述论文。工作量依然巨大！
